<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.weidongjian.com.selfdestructingmessage.ui.LoginActivity" >

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/singup"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        style="@style/TextView"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/login_subtilte"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_username"
        style="@style/EditText"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_subtitle"
        android:hint="@string/hint_username" >
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/et_email"
        style="@style/EditText"
        android:layout_below="@id/et_username"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentLeft="true"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_password"
        style="@style/EditText"
        android:hint="@string/hint_password"
        android:layout_alignLeft="@id/et_username"
        android:layout_alignRight="@id/et_username"
        android:layout_below="@id/et_email"
        android:layout_marginTop="10dp"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/cb_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_username"
        android:layout_below="@id/et_password"
        android:text="@string/show_password" />

    <Button
        android:id="@+id/bt_singup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_username"
        android:layout_alignRight="@id/et_username"
        android:layout_below="@id/cb_show_password"
        android:layout_marginTop="14dp"
        android:text="@string/singup" />

    <TextView
        android:id="@+id/tv_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_username"
        android:layout_below="@id/bt_singup"
        android:layout_marginTop="19dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/message_back_to_login" />

</RelativeLayout>