<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorDialogLinearDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:dividerPadding="10dp"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_alpha" />

            <SeekBar
                android:id="@+id/alphaSeekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progressDrawable="@drawable/progressbar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_red" />

            <SeekBar
                android:id="@+id/redSeekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progressDrawable="@drawable/progressbar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_green" />

            <SeekBar
                android:id="@+id/greenSeekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progressDrawable="@drawable/progressbar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_blue" />

            <SeekBar
                android:id="@+id/blueSeekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progressDrawable="@drawable/progressbar" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/white" >

        <View
            android:id="@+id/colorView"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>

    <Button
        android:id="@+id/setColorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_set_color" />

</LinearLayout>